Data Import Asset/force-app/main/default/objects/Data_Upload_Template__mdt/Data_Upload_Template__mdt.object-meta.xml
<CustomObject>
    <label>Data Upload Template</label>
    <pluralLabel>Data Upload Templates</pluralLabel>
</CustomObject>