Data Import Asset/force-app/main/default/objects/Data_Upload_Template__mdt/fields/Is_Lookup_Master_Detail__c.field-meta.xml
<CustomField>
    <fullName>Is_Lookup_Master_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lookup/Master-Detail</label>
    <type>Checkbox</type>
</CustomField>