Data Import Asset/force-app/main/default/objects/Data_Upload_Template__mdt/fields/Lookup_Master_Detail_To__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Master_Detail_To__c</fullName>
    <inlineHelpText>Parent Object API Name</inlineHelpText>
    <label>Lookup/Master-Detail To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>