Data Import Asset/force-app/main/default/objects/Data_Upload_Template__mdt/fields/Object_Api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_name__c</fullName>
    <label>Object Api name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>